Change Log: 12-06-2012 by JF
Files Changed:
    GUIFrame.java - messed with the look of the progress bars.  Added calls to
                    the UIManager to change the colors of the progress bar.
                    The "nimbus" look & feel (LAF) didn't like the manual overrides
                    so I also changed the default LAF to "metal"

Change Log: 12-05-2012 by JF
Files Changed:
    GameComparator.java - added a method to return an arraylist of games with achievements all completed.

    GUIFrame.java - added javadoc to almost everything.
                    moved the global progress bar up to the top right of the screen.
                    added a game specific progress bar when you click on a game.
                    added an itemlistener to the filtering checkboxes
                        -if you check "All achievements completed", it'll actually filter it, but when 
                        you uncheck it, the GameComparator was crashing when I was trying to use it to resort them.  Its a start at least

Change Log: 12-01-2012 by JF
Files Changed:
    GameButton.java - removed some unused data types and changed the constructor to only
                        receive a Game parameter. I had it taking in a User before for some reason.

    GamePanel.java - added this class to encapsulate the creation of game panels that go in
                        the scroll pane of the "My Games" screen. Contains a title, GameButton, and ProgressBar.
                        Still working on the overall look and feel of it.  I'd like it to be a little slicker.
   
    GUIFrame.java - added a MouseListener to the "backArrow" and "refresh" JLabel to switch cursor to hand.
                        Fixed scroll speed of the scroll pane.

    freshGUI.java - added a indeterminate loading bar and moved the scraping of profiles to a different thread.

Change Log: 11-29-2012 by MB
Files Changed: