@@ -17,6 +17,7 @@
             <word>args</word>
             <word>DataPath</word>
             <word>fileExists</word>
+            <word>freshGUI</word>
             <word>Game's</word>
             <word>GameButton</word>
             <word>GameComparator</word>
@@ -30,6 +31,7 @@
             <word>HDD</word>
             <word>ImageRenderer</word>
             <word>javadoc</word>
+            <word>JF</word>
             <word>jpg</word>
             <word>MalformedURL</word>
             <word>MB</word>
